# evmone

./: CMakeLists.txt  README.md
cmake/cable/: HunterGate.cmake
include/evmone/: evmone.h
lib/: CMakeLists.txt
lib/evmone/: CMakeLists.txt  advanced_execution.cpp  instructions.hpp  instructions_calls.cpp  vm.cpp
